beginning of work to change the spacing and padding issues

--- a/src/packages/modules/error-pages-z18/css/error-pages-z18.scss
+++ b/src/packages/modules/error-pages-z18/css/error-pages-z18.scss
@@ -2,6 +2,19 @@
 
 
 .error-pages {
+  .content {
+    height: 560px;
+    display: table;
+  }
+  .error-content-main {
+    display: table-cell;
+    vertical-align: middle;
+    height: 50%;
+    padding: 70px 52px 50px 52px;
+  }
+  .error-content-paragraph {
+    margin-bottom: 38px;
+  }
   .error-box {
       display: inline-block;
       padding: 25px 30px 20px;
